--- a/ime/css/style.css
+++ b/ime/css/style.css
@@ -42,13 +42,18 @@
         }
 
     #Cover .ok {
+	    position: static;
         margin-top: 10px;
         height: 50px;
         border-radius: 10px;
         }
 
-    #Cover .intro-video {
-        display: none;
+#Cover .intro-video {
+    display: none;
+    }
+
+    #Cover .intro-video video {
+	    z-index: 0;
         }
 
     .modernizr-h264 #Cover .intro-video {
@@ -107,21 +112,6 @@
     opacity: .6;
     }
 
-.slide video {
-    position: absolute;
-
-    height: 100%;
-    min-width: 100%;
-    left: -1px;
-    top: 0;
-	background-color: #000; /* TODO: add loading bar */
-    }
-
-.mobile .video_wrapper {
-	position: relative;
-	height: 300px;
-	}
-
 .slide .gif.real {
     display: none;
     }
@@ -168,12 +158,4 @@
 
 .mobile .hide-for-mobile {
 	display: none !important;
-	}
-
-.mobile .slide .video_wrapper {
-	display: none;
-	}
-
-.mobile .slide.active .video_wrapper {
-	display: block;
 	}
