--- a/ime/css/video.css
+++ b/ime/css/video.css
@@ -88,3 +88,8 @@ video {
 	position: relative; /* making video stretch relatively to its wrapper fo mobile devices */
 	height: 300px;
 	}
+
+.iphone .slide.cover .video_wrapper video {
+    width: 100%;
+    height: 100%;
+	}
